adopt jakarta naming, new vendor fixed JPMS descriptors, added missing ones update build plugins added missing OSGi header remove obsolete files update project structures
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>