@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2012, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2012, 2019 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -50,9 +50,10 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <includes>
-                                <include>module-info.java</include>
-                            </includes>
+                            <compilerArgs>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.xml.ws.servlet=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
@@ -61,7 +62,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <doclint>none</doclint>
                     <additionalOptions>--add-reads com.sun.xml.ws.servlet=ALL-UNNAMED</additionalOptions>
                 </configuration>
             </plugin>
